nohup.out
  File "main.py", line 266
    if i !
         ^
SyntaxError: invalid syntax
  File "main.py", line 266
    if i !
         ^
SyntaxError: invalid syntax
